adds left and right mouseclick, and random placement button